syntax = "proto3";

package qed.schemas.output;

message ChatMessage {
  string sender_name = 1;
  string content = 2;
  string message_type = 3;
}

message Exit {
  string direction = 1;
}

message AreaUpdate {
  string area_id = 1;
  string name = 2;
  string description = 3;
  repeated Exit exits = 4;
}

message OutputEvent {
  repeated string target_user_ids = 1;
  oneof payload {
    ChatMessage chat_message = 3;
    AreaUpdate area_update = 4;
  }
}